versioned_docs/version-3.3/api-libf3d/structf3d_1_1options_1_1model.md
# Structure f3d::options::model

![][C++]
![][public]

**Definition**: `options.h` (line 214)





## Inner classes

* [f3d::options::model::color](structf3d_1_1options_1_1model_1_1color.md)
* [f3d::options::model::emissive](structf3d_1_1options_1_1model_1_1emissive.md)
* [f3d::options::model::matcap](structf3d_1_1options_1_1model_1_1matcap.md)
* [f3d::options::model::material](structf3d_1_1options_1_1model_1_1material.md)
* [f3d::options::model::normal](structf3d_1_1options_1_1model_1_1normal.md)
* [f3d::options::model::point\_sprites](structf3d_1_1options_1_1model_1_1point__sprites.md)
* [f3d::options::model::scivis](structf3d_1_1options_1_1model_1_1scivis.md)
* [f3d::options::model::volume](structf3d_1_1options_1_1model_1_1volume.md)

## Members

* [color](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1af431816844fcf2363c491cae36ae27a3)
* [emissive](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1a8576319993b667a32f791126bee11b47)
* [matcap](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1acfddb706b49f026263e6d0c4d1d0b07f)
* [material](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1a9e2da200d13d4bda02caa6cc004c8cc4)
* [normal](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1ae1ad2f7a6c8deae51b7b4074160a20e9)
* [point\_sprites](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1aefc3dad289eb1460139d71ea5ae9fdb6)
* [scivis](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1a26daeb95647332f6e04250b4dcc07a38)
* [textures\_transform](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1a2b8efc944525703ee71255da231ff02e)
* [volume](structf3d_1_1options_1_1model.md#structf3d_1_1options_1_1model_1adf879ca381172543f8eb5087fd1127a7)

## Public attributes

### Variable color {/* #structf3d_1_1options_1_1model_1af431816844fcf2363c491cae36ae27a3 */}

![][public]

**Definition**: `options.h` (line 219)


```cpp
struct f3d::options::model::color f3d::options::model::color
```








**Type**: struct f3d::options::model::color



### Variable emissive {/* #structf3d_1_1options_1_1model_1a8576319993b667a32f791126bee11b47 */}

![][public]

**Definition**: `options.h` (line 224)


```cpp
struct f3d::options::model::emissive f3d::options::model::emissive
```








**Type**: struct f3d::options::model::emissive



### Variable matcap {/* #structf3d_1_1options_1_1model_1acfddb706b49f026263e6d0c4d1d0b07f */}

![][public]

**Definition**: `options.h` (line 228)


```cpp
struct f3d::options::model::matcap f3d::options::model::matcap
```








**Type**: struct f3d::options::model::matcap



### Variable material {/* #structf3d_1_1options_1_1model_1a9e2da200d13d4bda02caa6cc004c8cc4 */}

![][public]

**Definition**: `options.h` (line 235)


```cpp
struct f3d::options::model::material f3d::options::model::material
```








**Type**: struct f3d::options::model::material



### Variable normal {/* #structf3d_1_1options_1_1model_1ae1ad2f7a6c8deae51b7b4074160a20e9 */}

![][public]

**Definition**: `options.h` (line 240)


```cpp
struct f3d::options::model::normal f3d::options::model::normal
```








**Type**: struct f3d::options::model::normal



### Variable point\_sprites {/* #structf3d_1_1options_1_1model_1aefc3dad289eb1460139d71ea5ae9fdb6 */}

![][public]

**Definition**: `options.h` (line 246)


```cpp
struct f3d::options::model::point_sprites f3d::options::model::point_sprites
```








**Type**: struct f3d::options::model::point_sprites



### Variable scivis {/* #structf3d_1_1options_1_1model_1a26daeb95647332f6e04250b4dcc07a38 */}

![][public]

**Definition**: `options.h` (line 256)


```cpp
struct f3d::options::model::scivis f3d::options::model::scivis
```








**Type**: struct f3d::options::model::scivis



### Variable textures\_transform {/* #structf3d_1_1options_1_1model_1a2b8efc944525703ee71255da231ff02e */}

![][public]

**Definition**: `options.h` (line 258)


```cpp
std::optional<f3d::transform2d_t> f3d::options::model::textures_transform
```








**Type**: std::optional< [f3d::transform2d\_t](classf3d_1_1transform2d__t.md) >



### Variable volume {/* #structf3d_1_1options_1_1model_1adf879ca381172543f8eb5087fd1127a7 */}

![][public]

**Definition**: `options.h` (line 262)


```cpp
struct f3d::options::model::volume f3d::options::model::volume
```








**Type**: struct f3d::options::model::volume



[public]: https://img.shields.io/badge/-public-brightgreen (public)
[C++]: https://img.shields.io/badge/language-C%2B%2B-blue (C++)
[const]: https://img.shields.io/badge/-const-lightblue (const)
[protected]: https://img.shields.io/badge/-protected-yellow (protected)
[static]: https://img.shields.io/badge/-static-lightgrey (static)
[private]: https://img.shields.io/badge/-private-red (private)